# jobagent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml  profile.example.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
jobagent/: __init__.py  cli.py  logging_config.py  pipeline.py  settings.py
jobagent/agent/: ai_client.py  easy_apply.py  scanner.py
jobagent/cv/: generator.py
jobagent/dashboard/: server.py
jobagent/db/: tracker.py
jobagent/notifier/: whatsapp.py
tests/unit/: conftest.py  test_preview_gate.py  test_settings.py  test_tracker.py
